--- a/ProcessManagement/ProcessManagement.csproj
+++ b/ProcessManagement/ProcessManagement.csproj
@@ -8570,6 +8570,7 @@
     <Content Include="Views\Shared\_NullLayout.cshtml" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\Process\Date.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
